<resources>
    <string name="app_name">My Movies</string>
    <string name="api_key">6e9291f7e84faecfb33b4d44e9ab32a5</string>
    <string name="movie_title_placeholder">{movie_title}</string>
    <string name="movie_poster_for_grid">Movie Poster for grid</string>
    <string name="movie_poster_imageview">Movie Poster ImageView</string>
    <string name="movie_title">{Movie_Title}</string>
    <string name="movie_rating">{Movie Rating}</string>
    <string name="movie_description">{Movie Description}</string>
    <string name="release_date">{Release Date}</string>
    <string name="release_label">Release</string>
    <string name="sort_by_popularity">Sort By Popularity</string>
    <string name="sort_by_top_rated">Sort By Top Rated</string>
    <string name="sort_by_favorites">Favorites</string>
    <string name="ratings_icon">Ratings Icon</string>
    <string name="no_internet_text">No Internet Found.\nCheck your connection or try again.\n\n
        Meanwhile you can look at your favourite movies \noffline from the Menu top-right</string>
    <string name="retry">Retry</string>
    <string name="popular">popular</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="thumbnail_url">https://img.youtube.com/vi/</string>
    <string name="thumbnail_suffix">/mqdefault.jpg</string>
    <string name="trailerPoster">Image of the Trailer</string>
    <string name="action_settings">Settings</string>
    <string name="trailersLabel">Trailers</string>
    <string name="trailersLabelHint">{Trailers Label}</string>
    <string name="reviewsLabel">Reviews</string>
    <string name="reviewLabel">Review</string>
    <string name="reviewsLabelHint">{Reviews Label}</string>
    <string name="review_text_hint">{review_text}</string>
    <string name="review_author_hint">{review_author_text}</string>
    <string name="read_more_hint">{read_more}</string>
    <string name="read_more_text">Read More</string>
    <string name="review_button_close">X</string>
    <string name="hyphen">-</string>
    <string name="unlike_icon">unlike icon</string>
    <string name="current_category">{Current Category}</string>
    <string name="popular_movie_list_caption">Popular Movies</string>
    <string name="top_rated_movie_list_caption">Top Rated Movies</string>
    <string name="favorites_movie_list_caption">Your Favorite Movies</string>
</resources>