<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentNestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.DetailActivity"
    tools:showIn="@layout/activity_detail">

    <RelativeLayout
        android:id="@+id/parentLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/movie_poster_iv"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/movie_poster_imageview"
            android:src="@drawable/ic_videocam_black_48dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/movie_poster_iv"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/rating_icon"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:contentDescription="@string/ratings_icon"
                android:src="@drawable/star" />

            <TextView
                android:id="@+id/movie_rating_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/movie_rating"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <TextView
                android:id="@+id/release_date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/release_date"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/favorite_iv"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/unlike_icon"
                android:src="@drawable/unlike" />
        </LinearLayout>

        <TextView
            android:id="@+id/movie_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/movie_poster_iv"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/movie_title"
            android:textColor="@android:color/holo_red_light"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/movie_description_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/movie_title_tv"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/movie_description"
            android:textSize="16sp" />

        <View
            android:id="@+id/divider1"
            style="@style/Divider"
            android:layout_below="@+id/movie_description_tv"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/trailers_label_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider1"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/trailersLabelHint"
            android:text="@string/trailersLabel"
            android:textColor="@android:color/holo_red_light"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trailersRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/trailers_label_tv"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal" />

        <View
            android:id="@+id/divider2"
            style="@style/Divider"
            android:layout_below="@+id/trailersRecyclerView"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/reviews_label_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider2"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/reviewsLabelHint"
            android:text="@string/reviewsLabel"
            android:textColor="@android:color/holo_red_light"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/reviewsGridRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/reviews_label_tv"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp" />
    </RelativeLayout>

</androidx.core.widget.NestedScrollView>